fixing white space between back and to

--- a/src/src/routes/Menu/FoodBrandPage/FoodBrandPage.css
+++ b/src/src/routes/Menu/FoodBrandPage/FoodBrandPage.css
@@ -39,6 +39,7 @@
   font-weight: bold;
   position: absolute;
   cursor: pointer;
+  white-space: pre;
 }
 
 .hideOnMobile {
